Fixing spacing

--- a/css/partnership.css
+++ b/css/partnership.css
@@ -18,11 +18,11 @@
 	color: #696a6d;
 	font-size: 16pt;
 	font-family: "GT-Walsheim-Thin";
-	margin-bottom: 2.5rem;
+	margin-bottom: 5rem;
 }
 
 .text-center img {
-	margin-bottom: 2.5rem;
+	margin-bottom: 4rem;
 }
 
 .partners {
